syntax = "proto3";

message MsgPayForMessage {
    string signer = 1;
    bytes message_namespace_id = 2;
    uint64 message_size = 3;
    bytes message_share_commitment = 4;
}

message MalleatedTx {
    bytes original_tx_hash = 1;
    bytes tx = 2;
}